# coster

./: Build.toml  Cargo.toml  LICENSE.txt  README.md  build.rs  i18n.toml
cargo-i18n/: Cargo.toml
cargo-i18n/src/: config.rs  lib.rs
cargo-i18n/src/gettext/: mod.rs
costing/: Cargo.toml
costing/src/: actions.rs  db.rs  error.rs  expense.rs  lib.rs  settlement.rs  tab.rs  user.rs
gui/: .gitignore  .graphqlconfig.yaml  Cargo.toml  README.md  build-wasm.sh  i18n.toml  package-lock.json  package.json  update-schema.sh
gui/form-validation/: Cargo.toml  README.md
gui/i18n/po/es/: gui.po
gui/i18n/po/ru/: gui.po
gui/i18n/pot/: gui.pot  lib.pot
gui/i18n/ru/: lib.po
gui/mockups/: Mockup.epgz
gui/sass/: gui_bulma.scss
gui/src/: lib.rs
gui/src/bulma/: color.rs  mod.rs
gui/src/bulma/classes/: color.rs  mod.rs  size.rs
gui/src/bulma/components/: icon.rs  mod.rs  select.rs
gui/src/bulma/components/form/: field.rs  form.rs  input_field.rs  mod.rs  select_field.rs
gui/src/components/: clicker_button.rs  costing_tab.rs  costing_tab_list.rs  mod.rs  navbar.rs  new_costing_tab.rs  select.rs
gui/src/components/pages/: costing_tab_list_page.rs  costing_tab_page.rs  layouts.rs  mod.rs  page.rs
gui/src/graphql/: addtest.graphql  addtest.rs  client.rs  mod.rs  schema.graphql
gui/src/routing/: mod.rs
gui/src/state/: action.rs  db.rs  effect.rs  event.rs  middleware.rs  mod.rs  reducer.rs  route.rs  state.rs
gui/src/state/middleware/: db.rs  localize.rs  mod.rs  route.rs
gui/src/state/middleware/db/: dispatch.rs  mod.rs
gui/src/test/: mod.rs
gui/src/validation/: mod.rs
gui/switch-router/: Cargo.toml
gui/switch-router/src/: lib.rs
gui/yew-bulma/: Cargo.toml
gui/yew-bulma/src/components/form/: input_field.rs  select_field.rs
gui/yew-state/: Cargo.toml  README.md
gui/yew-state/src/: event.rs  lib.rs  listener.rs  middleware.rs  provider.rs  reducer.rs  store.rs
gui/yew-state/src/middleware/: action_middleware.rs  mod.rs  simple_logger.rs  web_logger.rs
public/: index.html
public/css/bulma/: bulma.min.css
src/: lib.rs  main.rs
src/accounting/: mod.rs
src/costing/: mod.rs
src/currency/: mod.rs
src/exchange_rate/: mod.rs
templates/: base.html.tera  index.html.tera
templates/error/: 404.html.tera
