[package]
name = "coster"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
serde_derive = "1.0"
serde_json = "1.0"
rust_decimal = "1.7.0"
rusqlite = { version = "0.23", features = ["chrono", "bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
costing = { path = "./costing" }
commodity = { version = "0.4", features = ["serde-support"] }
rust-embed = "5.6.0"
mime_guess = "2"
log = "0.4"
pretty_env_logger = "0.4"
kvdb = "0.7"
kvdb-rocksdb = "0.9"
async-graphql = "1.14"
async-graphql-warp = "1.14"

[build-dependencies]
ignore = "0.4"
subprocess = "0.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tr = { version = "0.1", default-features = false, features = ["gettext"] }

[workspace]

members = [
    "costing",
]

exclude = [
    "gui"
]