[package]
name = "costing"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0"
serde_json = "1.0"
rust_decimal = "1.5.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
commodity = { version = "0.3", features = ["serde-support"] }
doublecount = { version = "0.8", features = ["serde-support"] }
uuid = { version = "0.8", default_features = false, features = ["v4", "serde", "wasm-bindgen"] }