[package]
name = "gui"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
costing = { path = "../costing" }
yew-state = { path = "yew-state" }
switch-router = { path = "switch-router" }
commodity = { version = "0.3", features = ["serde-support"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
rust_decimal = "1.5.0"
yew = { git = "https://github.com/yewstack/yew.git" }
yew-router = { git = "https://github.com/yewstack/yew.git" }
yewtil = { git = "https://github.com/yewstack/yew.git", default-features = false, features = ["neq"] }
tr = { version = "0.1", default-features = false, features = ["gettext"] }
rust-embed = "5.5.1"
i18n-embed = { path = "../../cargo-i18n/i18n-embed", version = "0.6", features = ["web-sys-requester"] }
unic-langid = "0.9.0"
anyhow = "1.0"
log = "0.4"
wasm-logger = { version = "0.2.0", optional = true }
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
web-sys = "0.3"

[features]
default = ["logging"]
logging = ["wasm-logger"]

[workspace]
members = [
    "yew-state",
    "switch-router"
]

# [profile.release]
# lto = true
# opt-level = 's'