[package]
name = "gui"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
costing = { path = "../costing" }
yew-state = { path = "yew-state" }
yew-switch-router = { git = "https://github.com/kellpossible/yew-switch-router.git" }
commodity = { version = "0.4", features = ["serde-support", "iso4217"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
rust_decimal = "1.7.0"
yew = { version = "0.17" }
yew-router = { version = "0.14.0" }
yewtil = { version = "0.3.0", default-features = false, features = ["neq"] }
yew-bulma = { git = "https://github.com/kellpossible/yew-bulma.git" }
form-validation = "0.1"
tr = { version = "0.1", default-features = false, features = ["gettext"] }
rust-embed = { version = "5.6.0", features = ["debug-embed"] }
i18n-embed = { path = "../../cargo-i18n/i18n-embed", version = "0.6", features = ["web-sys-requester"] }
unic-langid = { version = "0.9.0", features = ["serde"]}
anyhow = "1.0"
thiserror = "1"
log = "0.4"
wasm-logger = { version = "0.2.0", optional = true }
lazy_static = "1.4.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Request"] }
kvdb = "0.7"
kvdb-web = "0.7"
uuid = { version = "0.8", default_features = false, features = ["v4", "serde", "wasm-bindgen"] }
graphql_client = { version = "0.9" }
futures = "0.3"

[features]
default = ["logging"]
logging = ["wasm-logger"]

[workspace]
members = [
    "yew-state",
]

# [profile.release]
# lto = true
# opt-level = 's'