[package]
name = "form-validation"
description = "A library for validating forms, and allowing validation logic to be shared."
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["validation", "forms"]
categories = ["gui"]

[badges]
maintenance = { status = "actively-developed" }