[package]
name = "switch-router"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-events = "0.1.1"
web-sys = {version = "0.3", features = ["History", "Location", "PopStateEvent"]}
wasm-bindgen = "0.2"
yew = { git = "https://github.com/yewstack/yew.git" } # TODO: make this optional