[package]
name = "yew-state"
version = "0.1.0"
authors = ["Luke Frisken <l.frisken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", optional = true }
serde = { version = "1", optional = true }
log = "0.4"
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
default = ["yew-compat", "web"]
web = ["web-sys", "wasm-bindgen", "web-json-log"]
yew-compat = ["yew", "wasm-bindgen-futures"]
web-json-log = ["serde", "wasm-bindgen/serde-serialize"]